Wrapping broken, border needs fixing

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -575,14 +575,20 @@ footer
 		span
 			text-shadow inset-shadow
 
-	.bottom
-		padding 0px 16px 16px 16px
 	.top
 		padding 16px 16px 0px 0px
+		margin-bottom 1px
+	.bottom
+		padding 0px 16px 16px 16px
+		.info
+			padding-left 16px
+			margin-left -16px
+			border-top 1px solid text-color
 		
 	.composer
 		padding 0px 16px 0px 16px
 		background-color rgba(dark-dark-gray, .2)
+		border-bottom 1px solid text-color
 
 	// .name
 		
